# congnizant-hackathon-aura

./: .gitignore  Aura.pptx  README.md  pyproject.toml  run.sh
ai_chatbot/: parser.py
backend/: .forecast_cache.json  README.md  main.py  models.py
data/: hourly_load_data.csv
frontend/: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CarbonTimeline.jsx  EnergyMixChart.jsx  MetricCard.jsx  Navbar.jsx  NotificationComposer.jsx  Sidebar.jsx
frontend/src/components/Chatbot/: ChatInput.jsx  Chatbot.jsx  MessageBubble.jsx  nlpService.js  useChatbot.js
frontend/src/hooks/: useAuraData.js
frontend/src/pages/: AnalyticsPage.jsx  ChatBotPage.jsx  DashboardPage.jsx  HomePage.jsx  NotificationCenterPage.jsx
frontend/src/services/: api.js  auraAPI.js
frontend/src/styles/: index.css
ml_models/: aura_forecast_24h_with_carbon.csv  aura_green_window.json  compute_green_window.py  demand_forecast_model_trainer.py  seasonal_supply_model_builder.py
outputs/: aura_forecast_24h_with_carbon.csv  aura_green_window.json  complete_window_classification.json  seasonal_baseline.json
tests/: README.md  conftest.py  test_api.py  test_ml_models.py  test_utils.py
